Remove CXF and JAX-RS features from DDF

--- a/catalog/core/catalog-core-localstorageprovider/pom.xml
+++ b/catalog/core/catalog-core-localstorageprovider/pom.xml
@@ -71,6 +71,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.mime.core</groupId>
