--- a/catalog/core/catalog-core-commands/pom.xml
+++ b/catalog/core/catalog-core-commands/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.joda</groupId>
             <artifactId>joda-convert</artifactId>
-            <version>1.2</version>
+            <version>${joda-convert.version}</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
