--- a/catalog/core/catalog-core-commons/pom.xml
+++ b/catalog/core/catalog-core-commons/pom.xml
@@ -54,6 +54,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
