--- a/catalog/core/catalog-core-impl/pubsub/pom.xml
+++ b/catalog/core/catalog-core-impl/pubsub/pom.xml
@@ -77,6 +77,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
