--- a/catalog/core/catalog-core-metacardgroomerplugin/pom.xml
+++ b/catalog/core/catalog-core-metacardgroomerplugin/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
