--- a/catalog/solr/catalog-solr-commands/pom.xml
+++ b/catalog/solr/catalog-solr-commands/pom.xml
@@ -92,6 +92,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
