--- a/catalog/solr/catalog-solr-core/pom.xml
+++ b/catalog/solr/catalog-solr-core/pom.xml
@@ -66,6 +66,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
