--- a/pom.xml
+++ b/pom.xml
@@ -84,14 +84,10 @@
         <variable-prefix>${</variable-prefix>
         <!--Individual application names-->
         <catalog-ui>Intrigue</catalog-ui>
-        <ddf-admin>Admin</ddf-admin>
         <admin-console>Admin Console</admin-console>
         <command-console>Command Console</command-console>
         <ddf-catalog>Catalog</ddf-catalog>
         <ddf-platform>Platform</ddf-platform>
-        <ddf-registry>Registry</ddf-registry>
-        <ddf-resource-management>Resource Management</ddf-resource-management>
-        <ddf-security>Security</ddf-security>
         <ddf-solr>Solr Catalog</ddf-solr>
         <ddf-spatial>Spatial</ddf-spatial>
         <ddf-ui>Search UI</ddf-ui>
@@ -114,13 +110,13 @@
         <dom4j.bundle.version>2.1.3_1</dom4j.bundle.version>
 
         <!--Test properties-->
-        <byte-buddy.version>1.12.16</byte-buddy.version>
+        <byte-buddy.version>1.12.18</byte-buddy.version>
         <hamcrest-all.servicemix.version>1.3_1</hamcrest-all.servicemix.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
         <hamcrest-optional.version>1.0</hamcrest-optional.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <spock.version>2.0-M4-groovy-3.0</spock.version>
+        <spock.version>2.3-groovy-3.0</spock.version>
         <mockito.version>4.8.1</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
         <pax.logging.version>2.1.3</pax.logging.version>
@@ -128,10 +124,9 @@
         <pax.web.version>8.0.6</pax.web.version>
         <restito.version>1.1.0</restito.version>
         <restassured.version>3.3.0</restassured.version>
-        <groovy.version>3.0.7</groovy.version>
+        <groovy.version>3.0.12</groovy.version>
         <xmlunit.version>1.6</xmlunit.version>
         <xmlunit-matchers.version>2.8.2</xmlunit-matchers.version>
-        <auth0.jwt.version>3.8.1</auth0.jwt.version>
 
         <!--Project properties-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -140,22 +135,18 @@
         <!--Documentation properties-->
         <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
         <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>
-        <asciidoctorj.pdf.version>2.3.3</asciidoctorj.pdf.version>
         <asciidoctorj.version>2.5.7</asciidoctorj.version>
         <jruby.version>9.2.20.1</jruby.version>
-        <openlayers.version>4.6.5</openlayers.version>
 
         <abdera.osgi.version>1.1.3_2</abdera.osgi.version>
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
-        <apache.shiro.version>1.9.1</apache.shiro.version>
         <asm.version>9.3</asm.version>
         <awaitility.version>3.1.6</awaitility.version>
         <bouncy.version>1.70</bouncy.version>
         <c3p0.version>0.9.5.5</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <camel.version>3.18.0</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.21</commons-compress.version>
         <commons.fileupload.version>1.4</commons.fileupload.version>
@@ -175,12 +166,10 @@
         <commons-math3.version>3.6.1</commons-math3.version>
         <commons-net.version>3.5</commons-net.version>
         <commons-pool.version>1.6</commons-pool.version>
-        <commons-text.version>1.6</commons-text.version>
         <commons-validator.version>1.6</commons-validator.version>
         <components-font-awesome.version>4.7.0</components-font-awesome.version>
         <countryconverter.version>0.1.8</countryconverter.version>
         <cryptomator.version>1.4.4</cryptomator.version>
-        <decanter.version>2.9.0</decanter.version>
         <dropwizard.version>4.1.25</dropwizard.version>
         <equinox.version>3.18.0</equinox.version>
         <felix.configadmin.version>1.9.24</felix.configadmin.version>
@@ -252,8 +241,6 @@
         <objenesis.version>3.2</objenesis.version>
         <ogc-tools-gml-jts.version>1.2.0</ogc-tools-gml-jts.version>
         <opendj-embedded.app.version>1.3.3</opendj-embedded.app.version>
-        <opensaml.version>3.4.6</opensaml.version>
-        <opensaml.osgi.version>3.4.5_2</opensaml.osgi.version>
         <nimbus.version>8.14.1</nimbus.version>
         <nimbus.oidc.version>8.22</nimbus.oidc.version>
         <nimbus.content-type.version>2.1</nimbus.content-type.version>
@@ -262,7 +249,6 @@
         <org.geotools.version>24.6</org.geotools.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
         <org.ops4j.pax.swissbox.version>1.8.5</org.ops4j.pax.swissbox.version>
-        <org.rrd4j.version>3.3.1</org.rrd4j.version>
         <org.slf4j.version>1.7.29</org.slf4j.version>
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <owasp-html-sanitizer.version>20220608.1</owasp-html-sanitizer.version>
@@ -277,7 +263,6 @@
         <quartz.version>2.3.2</quartz.version>
         <require-css.version>0.1.10</require-css.version>
         <sardine.version>5.7</sardine.version>
-        <hazelcast.version>3.12.10</hazelcast.version>
         <saxon.version>9.6.0-4</saxon.version>
         <servicemix.bundles.poi.version>${poi.version}_2</servicemix.bundles.poi.version>
         <servicemix.bundles.jaxb.version>${jaxb.version}_2</servicemix.bundles.jaxb.version>
@@ -363,48 +348,10 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
-            <!-- TODO: Use the OpenSAML BOM instead of declaring these individually. Can't do that
-                       right now because the BOM manages a bunch of other thirdparty dependencies,
-                       but check if that's changed when updating the OpenSAML version. See
-                       https://mvnrepository.com/artifact/org.opensaml/opensaml-bom -->
-            <dependency>
-                <groupId>org.opensaml</groupId>
-                <artifactId>opensaml-core</artifactId>
-                <version>${opensaml.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.opensaml</groupId>
-                <artifactId>opensaml-xmlsec-api</artifactId>
-                <version>${opensaml.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.opensaml</groupId>
-                <artifactId>opensaml-xmlsec-impl</artifactId>
-                <version>${opensaml.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.opensaml</groupId>
-                <artifactId>opensaml-soap-impl</artifactId>
-                <version>${opensaml.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.glassfish.jaxb</groupId>
                 <artifactId>jaxb-bom</artifactId>
                 <version>${jaxb.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-bom</artifactId>
-                <version>${camel.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.camel.karaf</groupId>
-                <artifactId>camel-karaf-bom</artifactId>
-                <version>${camel.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -417,6 +364,11 @@
             </dependency>
             <!-- END: BOMs -->
 
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>osgi.cmpn</artifactId>
+                <version>${osgi.compendium.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -433,19 +385,9 @@
                 <version>${javax.servlet-api.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.rrd4j</groupId>
-                <artifactId>rrd4j</artifactId>
-                <version>${org.rrd4j.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
                 <version>${commons.fileupload.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-core</artifactId>
-                <version>${apache.shiro.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -615,7 +557,6 @@
             </dependency>
             <!-- END -->
 
-            <!-- Solr (override camel-solr transitive dependencies from Camel BOM) -->
             <dependency>
                 <groupId>org.apache.solr</groupId>
                 <artifactId>solr-solrj</artifactId>
@@ -1348,7 +1289,7 @@
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.27.0-GA</version>
+            <version>3.29.2-GA</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1373,7 +1314,7 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-junit4</artifactId>
-            <version>2.0-M4-groovy-3.0</version>
+            <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
