Upgrade dependency versions

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
@@ -188,6 +188,7 @@ org.osgi.framework.system.packages.extra = \
     com.sun.crypto.provider, \
     com.sun.net.ssl, \
     com.sun.net.ssl.internal.ssl, \
+    com.sun.org.apache.xerces.internal.jaxp, \
     com.sun.security.auth.callback, \
     com.sun.security.auth.module, \
     org.bouncycastle.mail.smime.examples;version=${bouncy.version}, \
