--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <gib.enabled>false</gib.enabled>
         <gib.failOnError>false</gib.failOnError>
 
-        <jknack.handlebars.version>4.3.0</jknack.handlebars.version>
+        <jknack.handlebars.version>4.3.1</jknack.handlebars.version>
         <picocontainer.version>1.3_1</picocontainer.version>
         <dom4j.bundle.version>2.1.3_1</dom4j.bundle.version>
 
@@ -117,7 +117,7 @@
         <hamcrest-optional.version>1.0</hamcrest-optional.version>
         <jsonassert.version>1.5.0</jsonassert.version>
         <spock.version>2.3-groovy-3.0</spock.version>
-        <mockito.version>4.8.1</mockito.version>
+        <mockito.version>4.9.0</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
         <pax.logging.version>2.1.3</pax.logging.version>
         <pax.url.version>2.6.12</pax.url.version>
@@ -146,7 +146,7 @@
         <bouncy.version>1.70</bouncy.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <commons-compress.version>1.21</commons-compress.version>
+        <commons-compress.version>1.22</commons-compress.version>
         <commons.fileupload.version>1.4</commons.fileupload.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
@@ -162,6 +162,7 @@
         <commons-math3.version>3.6.1</commons-math3.version>
         <commons-net.version>3.5</commons-net.version>
         <countryconverter.version>0.1.8</countryconverter.version>
+        <dependency-check-maven.version>7.3.1</dependency-check-maven.version>
         <equinox.version>3.18.0</equinox.version>
         <felix.configadmin.version>1.9.24</felix.configadmin.version>
         <felix.coordinator.version>1.0.2</felix.coordinator.version>
@@ -169,13 +170,13 @@
         <felix.metatype.version>1.2.4</felix.metatype.version>
         <felix.scr.version>2.2.4</felix.scr.version>
         <gml-v_3_1_1-schema.version>1.1.0</gml-v_3_1_1-schema.version>
-        <gson.version>2.9.0</gson.version>
-        <guava.version>29.0-jre</guava.version>
+        <gson.version>2.10</gson.version>
+        <guava.version>31.1-jre</guava.version>
         <httpclient.version>4.5.12</httpclient.version>
         <httpcore.version>4.4.13</httpcore.version>
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jai-imageio-core.version>1.4.0</jai-imageio-core.version>
-        <jackson.version>2.13.3</jackson.version>
+        <jackson.version>2.14.0</jackson.version>
         <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
         <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <jakarta.mail.version>1.6.6</jakarta.mail.version>
@@ -195,7 +196,7 @@
         <jpeg2000.version>1.3.1_CODICE_3</jpeg2000.version>
         <json-simple.version>1.1.1</json-simple.version>
         <json-smart.version>2.4.8</json-smart.version>
-        <jsoup.version>1.15.2</jsoup.version>
+        <jsoup.version>1.15.3</jsoup.version>
         <jsr305.version>3.0.2</jsr305.version>
         <jsr305.bundle.version>${jsr305.version}_1</jsr305.bundle.version>
         <jsr339-api.bundle.version>2.6.0</jsr339-api.bundle.version>
@@ -229,10 +230,10 @@
         <pdfbox.version>2.0.23</pdfbox.version>
         <poi.version>5.2.2</poi.version>
         <xlsx.transformer.poi.version>5.2.2</xlsx.transformer.poi.version>
-        <protobuf.version>3.19.3</protobuf.version>
-        <saxon.version>9.6.0-4</saxon.version>
+        <protobuf.version>3.19.6</protobuf.version>
+        <saxon.version>9.9.1-6</saxon.version>
         <servicemix.bundles.poi.version>${poi.version}_2</servicemix.bundles.poi.version>
-        <servicemix.bundles.jaxb.version>${jaxb.version}_2</servicemix.bundles.jaxb.version>
+        <servicemix.bundles.jaxb.version>${jaxb.version}_3</servicemix.bundles.jaxb.version>
         <servicemix-depends.version>1.4.0</servicemix-depends.version>
         <servicemix.specs.jaxb.version>2.3_3</servicemix.specs.jaxb.version>
         <servicemix.specs.version>2.9.0</servicemix.specs.version>
@@ -248,7 +249,7 @@
         <tika.version>1.28.4</tika.version>
         <usng4j.version>0.4</usng4j.version>
         <validation.version>1.1.0.Final</validation.version>
-        <woodstox.core.version>6.2.8</woodstox.core.version>
+        <woodstox.core.version>6.4.0</woodstox.core.version>
         <woodstox.stax2-api.version>4.2.1</woodstox.stax2-api.version>
         <xalan.version>2.7.2</xalan.version>
         <xerces.version>2.12.2</xerces.version>
@@ -562,7 +563,7 @@
                     <!-- mvn versions:display-dependency-updates > versions_upgrade.txt -->
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.13.0</version>
                     <configuration>
                         <rulesUri>file:///${session.executionRootDirectory}/rules.xml</rulesUri>
                     </configuration>
