--- a/catalog/solr/catalog-solr-core/pom.xml
+++ b/catalog/solr/catalog-solr-core/pom.xml
@@ -170,7 +170,7 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>3.1.2</version>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
