--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -106,6 +106,22 @@ org.codice.ddf.system.threadPoolSize=128
 #org.osgi.framework.security=osgi
 #org.osgi.framework.trust.repositories=${karaf.etc}/trustStore.ks
 
+#
+# Password Encryption Properties
+#
+# Refer to Jasypt documentation for more details.
+# http://www.jasypt.org/
+#
+# encryption.password=changit
+# encryption.algorithm=PBEWithHmacSHA512AndAES_256
+# encryption.iv.classname=org.jasypt.iv.RandomIvGenerator
+# encryption.output.type=base64
+# encryption.iterations=1000
+# encryption.salt.classname=org.jasypt.salt.RandomSaltGenerator
+# encryption.provider.name=BC
+# encryption.provider.classname=org.bouncycastle.jce.provider.BouncyCastleProvider
+# encryption.prefix=ENC(
+# encryption.suffix=)
 
 #
 # HTTPS Specific Settings
