--- a/lib/common-system/pom.xml
+++ b/lib/common-system/pom.xml
@@ -41,6 +41,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>${jasypt.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
