--- a/distribution/docker/ddf-docker/src/main/docker/Dockerfile
+++ b/distribution/docker/ddf-docker/src/main/docker/Dockerfile
@@ -12,15 +12,20 @@ RUN unzip /zips/ddf-${project.version}.zip -d /prep
 RUN mv /prep/ddf-${project.version} /prep/ddf
 
 # Final Image Stage
-FROM codice/ddf-base:${docker.ddf.base.version}
+FROM eclipse-temurin:${maven.compiler.target}-jre-alpine
 LABEL maintainer=codice
 
+ENV ENTRYPOINT_HOME=/opt/entrypoint
 ENV APP_HOME=/app
-ENV APP_NAME=/ddf
+ENV APP_NAME=ddf
 ENV APP_LOG=$APP_HOME/data/log/$APP_NAME.log
 
+EXPOSE 8993 8181 8101
+VOLUME $APP_HOME/data $APP_HOME/deploy $APP_HOME/etc
+RUN mkdir -p $ENTRYPOINT_HOME
+
+COPY maven/entrypoint.sh $ENTRYPOINT_HOME/
+RUN chmod 755 $ENTRYPOINT_HOME/entrypoint.sh
 COPY --from=prep /prep/ddf $APP_HOME
 
-VOLUME $APP_HOME/data $APP_HOME/deploy $APP_HOME/etc
-
-EXPOSE 8993 8181 8101
+ENTRYPOINT ["/opt/entrypoint/entrypoint.sh"]
