Allow more options to be set by environment variables

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -66,12 +66,7 @@ org.codice.ddf.system.organization=${organization.name}
 solr.data.dir=_DO_NOT_EXPAND_${karaf.home}/data/solr
 
 # Solr Cloud Provider
-solr.client=CloudSolrClient
-solr.cloud.zookeeper=localhost:2181
-
-solr.useBasicAuth=false
-solr.username=admin
-solr.password=admin
+# solr.cloud.zookeeper=localhost:2181
 
 # Comma-separated list of fields to expand to when a query use the anytext field
 solr.query.anytext.fields=metadata,title,description,ext.extracted.text
