--- a/distribution/solr-distro/pom.xml
+++ b/distribution/solr-distro/pom.xml
@@ -78,9 +78,9 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons-text.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -108,7 +108,7 @@
                             </url>
                             <unpack>true</unpack>
                             <failOnError>true</failOnError>
-                            <sha512>085f6fce67326ffdcca965854e25f720849bc3e0dc7e4fac5fa0b550d42af188b10e2b799039a50d00fcc84c364d294572ceb5ecdfa21eb28df331ab881a3689</sha512>
+                            <sha512>ccd6032b5f9e9013facfa66dc2e8e07f82f9d90241e8ead1011ed27b6f61d64d3d34a9060fcac9025efd5bf0b5bae994c7f1ce72a91fabaf236dbcaa1cf3cd1f</sha512>
                             <checkSignature>true</checkSignature>
                         </configuration>
                     </execution>
