Fixes build due to incompatible cxf-wadl2java-plugin version

--- a/catalog/confluence/catalog-confluence-common/pom.xml
+++ b/catalog/confluence/catalog-confluence-common/pom.xml
@@ -35,6 +35,7 @@
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-wadl2java-plugin</artifactId>
+                <version>${cxf.version}</version>
                 <executions>
                     <execution>
                         <id>generate-sources</id>
