Additional version fix

--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -195,6 +195,7 @@
                 <plugin>
                     <groupId>org.apache.cxf</groupId>
                     <artifactId>cxf-codegen-plugin</artifactId>
+                    <version>${cxf.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
