Fix feature files for improved downstream distribution support

--- a/features/admin/pom.xml
+++ b/features/admin/pom.xml
@@ -201,6 +201,13 @@
         </dependency>
         <dependency>
             <groupId>ddf.features</groupId>
+            <artifactId>camel-karaf</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
             <artifactId>security</artifactId>
             <version>${project.version}</version>
             <type>xml</type>
