--- a/features/solr/pom.xml
+++ b/features/solr/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
-            <version>3.4.1</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
