--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis-ext</artifactId>
-            <version>1.3.04</version>
+            <version>${xml-apis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
