--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -95,6 +95,28 @@
             <artifactId>common-system</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- BEGIN: Felix Health Check dependencies -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.healthcheck.api</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.healthcheck.core</artifactId>
+            <version>2.0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.healthcheck.generalchecks</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.healthcheck.webconsoleplugin</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <!-- END -->
         <!-- BEGIN: Tika dependencies -->
         <dependency>
             <groupId>org.apache.tika</groupId>
